namespace UOC.TFG.TechnicalDemo
{
    public class StringsData
    {
        public const string DEMOSCENE_A = "DemoScene_A";
        //public const string ORBIT_CAM = "OrbitCamera";
        public const string ANIMATIONS = "Animations";
        public const string NEXT_ANIM = "NextAnimation";
        public const string PREV_ANIM = "PreviousAnimation";
        public const string NEXT_SKIN = "NextSkin";
        public const string PREV_SKIN = "PreviousSkin";
        public const string MENU_PAUSE = "MenuPause";
    }
}